--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -370,6 +370,12 @@
     <Compile Include="sdgCanonicalCorrelation.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="sdgCumDistPlotOptions.Designer.vb">
+      <DependentUpon>sdgCumDistPlotOptions.vb</DependentUpon>
+    </Compile>
+    <Compile Include="sdgCumDistPlotOptions.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="sdgPieChartOptions.Designer.vb">
       <DependentUpon>sdgPieChartOptions.vb</DependentUpon>
     </Compile>
@@ -1720,6 +1726,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="sdgCorrPlot.sw-KE.resx">
       <DependentUpon>sdgCorrPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgCumDistPlotOptions.fr-FR.resx">
+      <DependentUpon>sdgCumDistPlotOptions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgCumDistPlotOptions.resx">
+      <DependentUpon>sdgCumDistPlotOptions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgCumDistPlotOptions.sw-KE.resx">
+      <DependentUpon>sdgCumDistPlotOptions.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sdgDotPlot.fr-FR.resx">
       <DependentUpon>sdgDotPlot.vb</DependentUpon>
