--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -370,6 +370,12 @@
     <Compile Include="sdgCanonicalCorrelation.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="sdgCumDistLineOptions.Designer.vb">
+      <DependentUpon>sdgCumDistLineOptions.vb</DependentUpon>
+    </Compile>
+    <Compile Include="sdgCumDistLineOptions.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="sdgCumDistPlotOptions.Designer.vb">
       <DependentUpon>sdgCumDistPlotOptions.vb</DependentUpon>
     </Compile>
@@ -1726,6 +1732,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="sdgCorrPlot.sw-KE.resx">
       <DependentUpon>sdgCorrPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgCumDistLineOptions.fr-FR.resx">
+      <DependentUpon>sdgCumDistLineOptions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgCumDistLineOptions.resx">
+      <DependentUpon>sdgCumDistLineOptions.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="sdgCumDistLineOptions.sw-KE.resx">
+      <DependentUpon>sdgCumDistLineOptions.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sdgCumDistPlotOptions.fr-FR.resx">
       <DependentUpon>sdgCumDistPlotOptions.vb</DependentUpon>
