--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -364,6 +364,12 @@
     <Compile Include="dlgUnusedLevels.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgViewDescriptive.Designer.vb">
+      <DependentUpon>dlgViewDescriptive.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgViewDescriptive.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="sdgCanonicalCorrelation.Designer.vb">
       <DependentUpon>sdgCanonicalCorrelation.vb</DependentUpon>
     </Compile>
@@ -1696,6 +1702,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgUnusedLevels.sw-KE.resx">
       <DependentUpon>dlgUnusedLevels.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgViewDescriptive.fr-FR.resx">
+      <DependentUpon>dlgViewDescriptive.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgViewDescriptive.resx">
+      <DependentUpon>dlgViewDescriptive.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgViewDescriptive.sw-KE.resx">
+      <DependentUpon>dlgViewDescriptive.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sdgBarChart.fr-FR.resx">
       <DependentUpon>sdgBarChart.vb</DependentUpon>
