--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -316,6 +316,12 @@
     <Compile Include="dlgReferenceLevels.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgRenameDescriptive.Designer.vb">
+      <DependentUpon>dlgRenameDescriptive.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgRenameDescriptive.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgRenameSheet.Designer.vb">
       <DependentUpon>dlgRenameSheet.vb</DependentUpon>
     </Compile>
@@ -1636,6 +1642,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgReferenceLevels.sw-KE.resx">
       <DependentUpon>dlgReferenceLevels.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgRenameDescriptive.fr-FR.resx">
+      <DependentUpon>dlgRenameDescriptive.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgRenameDescriptive.resx">
+      <DependentUpon>dlgRenameDescriptive.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgRenameDescriptive.sw-KE.resx">
+      <DependentUpon>dlgRenameDescriptive.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgRenameSheet.fr-FR.resx">
       <DependentUpon>dlgRenameSheet.vb</DependentUpon>
