--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -250,6 +250,12 @@
     <Compile Include="dlgDeleteColumn.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgDeleteDescriptive.Designer.vb">
+      <DependentUpon>dlgDeleteDescriptive.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgDeleteDescriptive.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgDeleteSheet.Designer.vb">
       <DependentUpon>dlgDeleteSheet.vb</DependentUpon>
     </Compile>
@@ -1543,6 +1549,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgDeleteColumn.sw-KE.resx">
       <DependentUpon>dlgDeleteColumn.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgDeleteDescriptive.fr-FR.resx">
+      <DependentUpon>dlgDeleteDescriptive.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgDeleteDescriptive.resx">
+      <DependentUpon>dlgDeleteDescriptive.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgDeleteDescriptive.sw-KE.resx">
+      <DependentUpon>dlgDeleteDescriptive.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgDeleteSheet.fr-FR.resx">
       <DependentUpon>dlgDeleteSheet.vb</DependentUpon>
