--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -388,6 +388,12 @@
     <Compile Include="dlgViewDescriptive.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgViewModels.Designer.vb">
+      <DependentUpon>dlgViewModels.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgViewModels.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="sdgCanonicalCorrelation.Designer.vb">
       <DependentUpon>sdgCanonicalCorrelation.vb</DependentUpon>
     </Compile>
@@ -1756,6 +1762,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgViewDescriptive.sw-KE.resx">
       <DependentUpon>dlgViewDescriptive.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgViewModels.fr-FR.resx">
+      <DependentUpon>dlgViewModels.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgViewModels.resx">
+      <DependentUpon>dlgViewModels.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgViewModels.sw-KE.resx">
+      <DependentUpon>dlgViewModels.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="sdgBarChart.fr-FR.resx">
       <DependentUpon>sdgBarChart.vb</DependentUpon>
