--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -208,6 +208,12 @@
     <Compile Include="dlgChangeType.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgCheck.Designer.vb">
+      <DependentUpon>dlgCheck.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgCheck.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgChiSquareTest.designer.vb">
       <DependentUpon>dlgChiSquareTest.vb</DependentUpon>
     </Compile>
@@ -1519,6 +1525,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgChangeType.sw-KE.resx">
       <DependentUpon>dlgChangeType.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCheck.fr-FR.resx">
+      <DependentUpon>dlgCheck.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCheck.resx">
+      <DependentUpon>dlgCheck.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCheck.sw-KE.resx">
+      <DependentUpon>dlgCheck.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgChiSquareTest.fr-FR.resx">
       <DependentUpon>dlgChiSquareTest.vb</DependentUpon>
