--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -406,6 +406,12 @@
     <Compile Include="dlgScatterPlot.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgSheetMetadata.Designer.vb">
+      <DependentUpon>dlgSheetMetadata.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgSheetMetadata.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgSummaryBarOrPieChart.Designer.vb">
       <DependentUpon>dlgSummaryBarOrPieChart.vb</DependentUpon>
     </Compile>
@@ -1831,6 +1837,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgScatterPlot.sw-KE.resx">
       <DependentUpon>dlgScatterPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgSheetMetadata.fr-FR.resx">
+      <DependentUpon>dlgSheetMetadata.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgSheetMetadata.resx">
+      <DependentUpon>dlgSheetMetadata.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgSheetMetadata.sw-KE.resx">
+      <DependentUpon>dlgSheetMetadata.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgSummaryBarOrPieChart.fr-FR.resx">
       <DependentUpon>dlgSummaryBarOrPieChart.vb</DependentUpon>
