--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -370,10 +370,10 @@
     <Compile Include="dlgRenameSheet.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dlgReoderDescriptive.Designer.vb">
-      <DependentUpon>dlgReoderDescriptive.vb</DependentUpon>
+    <Compile Include="dlgReoderDescriptives.Designer.vb">
+      <DependentUpon>dlgReoderDescriptives.vb</DependentUpon>
     </Compile>
-    <Compile Include="dlgReoderDescriptive.vb">
+    <Compile Include="dlgReoderDescriptives.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgReoderModels.Designer.vb">
@@ -1784,14 +1784,14 @@
     <EmbeddedResource Include="dlgRenameSheet.sw-KE.resx">
       <DependentUpon>dlgRenameSheet.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgReoderDescriptive.fr-FR.resx">
-      <DependentUpon>dlgReoderDescriptive.vb</DependentUpon>
+    <EmbeddedResource Include="dlgReoderDescriptives.fr-FR.resx">
+      <DependentUpon>dlgReoderDescriptives.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgReoderDescriptive.resx">
-      <DependentUpon>dlgReoderDescriptive.vb</DependentUpon>
+    <EmbeddedResource Include="dlgReoderDescriptives.resx">
+      <DependentUpon>dlgReoderDescriptives.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgReoderDescriptive.sw-KE.resx">
-      <DependentUpon>dlgReoderDescriptive.vb</DependentUpon>
+    <EmbeddedResource Include="dlgReoderDescriptives.sw-KE.resx">
+      <DependentUpon>dlgReoderDescriptives.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgReoderModels.fr-FR.resx">
       <DependentUpon>dlgReoderModels.vb</DependentUpon>
