--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -1416,6 +1416,12 @@
     <Compile Include="ucrReceiverSingle.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="ucrSaveGraph.Designer.vb">
+      <DependentUpon>ucrSaveGraph.vb</DependentUpon>
+    </Compile>
+    <Compile Include="ucrSaveGraph.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="ucrSaveModel.Designer.vb">
       <DependentUpon>ucrSaveModel.vb</DependentUpon>
     </Compile>
@@ -3294,6 +3300,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ucrReceiverSingle.sw-KE.resx">
       <DependentUpon>ucrReceiverSingle.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrSaveGraph.fr-FR.resx">
+      <DependentUpon>ucrSaveGraph.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrSaveGraph.resx">
+      <DependentUpon>ucrSaveGraph.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ucrSaveGraph.sw-KE.resx">
+      <DependentUpon>ucrSaveGraph.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucrSaveModel.fr-FR.resx">
       <DependentUpon>ucrSaveModel.vb</DependentUpon>
