--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -418,6 +418,12 @@
     <Compile Include="dlgSheetMetadata.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgSplitText.Designer.vb">
+      <DependentUpon>dlgSplitText.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgSplitText.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgSummaryBarOrPieChart.Designer.vb">
       <DependentUpon>dlgSummaryBarOrPieChart.vb</DependentUpon>
     </Compile>
@@ -1897,6 +1903,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgSheetMetadata.sw-KE.resx">
       <DependentUpon>dlgSheetMetadata.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgSplitText.fr-FR.resx">
+      <DependentUpon>dlgSplitText.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgSplitText.resx">
+      <DependentUpon>dlgSplitText.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgSplitText.sw-KE.resx">
+      <DependentUpon>dlgSplitText.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgSummaryBarOrPieChart.fr-FR.resx">
       <DependentUpon>dlgSummaryBarOrPieChart.vb</DependentUpon>
