--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -322,6 +322,12 @@
     <Compile Include="dlgMakeSheets.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgMatchText.Designer.vb">
+      <DependentUpon>dlgMatchText.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgMatchText.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgOneWayANOVA.Designer.vb">
       <DependentUpon>dlgOneWayANOVA.vb</DependentUpon>
     </Compile>
@@ -1765,6 +1771,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgMakeSheets.sw-KE.resx">
       <DependentUpon>dlgMakeSheets.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgMatchText.fr-FR.resx">
+      <DependentUpon>dlgMatchText.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgMatchText.resx">
+      <DependentUpon>dlgMatchText.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgMatchText.sw-KE.resx">
+      <DependentUpon>dlgMatchText.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgOneWayANOVA.fr-FR.resx">
       <DependentUpon>dlgOneWayANOVA.vb</DependentUpon>
