--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -166,10 +166,10 @@
     <Compile Include="dlgBarAndPieChart.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dlgBivariateANOVA.Designer.vb">
-      <DependentUpon>dlgBivariateANOVA.vb</DependentUpon>
+    <Compile Include="dlgGeneralANOVA.Designer.vb">
+      <DependentUpon>dlgGeneralANOVA.vb</DependentUpon>
     </Compile>
-    <Compile Include="dlgBivariateANOVA.vb">
+    <Compile Include="dlgGeneralANOVA.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgBoxplotCountVariable.designer.vb">
@@ -1216,10 +1216,10 @@
     <Compile Include="dlgTwoSamples.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dlgTwoWayAnova.Designer.vb">
-      <DependentUpon>dlgTwoWayAnova.vb</DependentUpon>
+    <Compile Include="dlgNon_ParametricTwoWayAnova.Designer.vb">
+      <DependentUpon>dlgNon_ParametricTwoWayAnova.vb</DependentUpon>
     </Compile>
-    <Compile Include="dlgTwoWayAnova.vb">
+    <Compile Include="dlgNon_ParametricTwoWayAnova.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgUnstack.Designer.vb">
@@ -1535,14 +1535,14 @@
     <EmbeddedResource Include="dlgBarAndPieChart.sw-KE.resx">
       <DependentUpon>dlgBarAndPieChart.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgBivariateANOVA.fr-FR.resx">
-      <DependentUpon>dlgBivariateANOVA.vb</DependentUpon>
+    <EmbeddedResource Include="dlgGeneralANOVA.fr-FR.resx">
+      <DependentUpon>dlgGeneralANOVA.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgBivariateANOVA.resx">
-      <DependentUpon>dlgBivariateANOVA.vb</DependentUpon>
+    <EmbeddedResource Include="dlgGeneralANOVA.resx">
+      <DependentUpon>dlgGeneralANOVA.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgBivariateANOVA.sw-KE.resx">
-      <DependentUpon>dlgBivariateANOVA.vb</DependentUpon>
+    <EmbeddedResource Include="dlgGeneralANOVA.sw-KE.resx">
+      <DependentUpon>dlgGeneralANOVA.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgBoxPlot.fr-FR.resx">
       <DependentUpon>dlgBoxPlot.vb</DependentUpon>
@@ -1946,14 +1946,14 @@
     <EmbeddedResource Include="dlgTwoSampleNonparametricTest.sw-KE.resx">
       <DependentUpon>dlgTwoSampleNonparametricTest.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgTwoWayAnova.fr-FR.resx">
-      <DependentUpon>dlgTwoWayAnova.vb</DependentUpon>
+    <EmbeddedResource Include="dlgNon_ParametricTwoWayAnova.fr-FR.resx">
+      <DependentUpon>dlgNon_ParametricTwoWayAnova.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgTwoWayAnova.resx">
-      <DependentUpon>dlgTwoWayAnova.vb</DependentUpon>
+    <EmbeddedResource Include="dlgNon_ParametricTwoWayAnova.resx">
+      <DependentUpon>dlgNon_ParametricTwoWayAnova.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgTwoWayAnova.sw-KE.resx">
-      <DependentUpon>dlgTwoWayAnova.vb</DependentUpon>
+    <EmbeddedResource Include="dlgNon_ParametricTwoWayAnova.sw-KE.resx">
+      <DependentUpon>dlgNon_ParametricTwoWayAnova.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgUnusedLevels.fr-FR.resx">
       <DependentUpon>dlgUnusedLevels.vb</DependentUpon>
