Four directional arrows to use in reordering

--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -3497,6 +3497,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="lib\unvell.ReoScript.dll" />
+    <Content Include="Resources\arrows_bottom.png" />
+    <Content Include="Resources\arrows_down.png" />
+    <Content Include="Resources\arrows_top.png" />
+    <Content Include="Resources\arrows_up.png" />
     <Content Include="static\ClimateObject\R\ClimateMethods\Models\readme_model.txt" />
     <Content Include="static\ClimateObject\R\R_front_ends\readme_front.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
