--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -580,12 +580,6 @@
     <Compile Include="dlgConvertColumnsToFactors.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dlgConvertTo.Designer.vb">
-      <DependentUpon>dlgConvertTo.vb</DependentUpon>
-    </Compile>
-    <Compile Include="dlgConvertTo.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="dlgCorrelation.designer.vb">
       <DependentUpon>dlgCorrelation.vb</DependentUpon>
     </Compile>
@@ -2157,15 +2151,6 @@
     <EmbeddedResource Include="dlgConvertColumnsToFactors.sw-KE.resx">
       <DependentUpon>dlgConvertColumnsToFactors.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgConvertTo.fr-FR.resx">
-      <DependentUpon>dlgConvertTo.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="dlgConvertTo.resx">
-      <DependentUpon>dlgConvertTo.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="dlgConvertTo.sw-KE.resx">
-      <DependentUpon>dlgConvertTo.vb</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="dlgCorrelation.fr-FR.resx">
       <DependentUpon>dlgCorrelation.vb</DependentUpon>
     </EmbeddedResource>
@@ -3225,7 +3210,9 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="My Project\Resources.sw-KE.resx" />
+    <EmbeddedResource Include="My Project\Resources.sw-KE.resx">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="sdgPlots.fr-FR.resx">
       <DependentUpon>sdgPlots.vb</DependentUpon>
     </EmbeddedResource>
@@ -3399,6 +3386,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ucrReorder.fr-FR.resx">
       <DependentUpon>ucrReorder.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="ucrReorder.resx">
       <DependentUpon>ucrReorder.vb</DependentUpon>
