--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -574,10 +574,10 @@
     <Compile Include="sdgRestrict.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dlgConvertToColumnFactors.Designer.vb">
-      <DependentUpon>dlgConvertToColumnFactors.vb</DependentUpon>
+    <Compile Include="dlgConvertColumns.Designer.vb">
+      <DependentUpon>dlgConvertColumns.vb</DependentUpon>
     </Compile>
-    <Compile Include="dlgConvertToColumnFactors.vb">
+    <Compile Include="dlgConvertColumns.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgCorrelation.designer.vb">
@@ -2142,14 +2142,14 @@
     <EmbeddedResource Include="sdgRestrict.sw-KE.resx">
       <DependentUpon>sdgRestrict.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgConvertToColumnFactors.fr-FR.resx">
-      <DependentUpon>dlgConvertToColumnFactors.vb</DependentUpon>
+    <EmbeddedResource Include="dlgConvertColumns.fr-FR.resx">
+      <DependentUpon>dlgConvertColumns.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgConvertToColumnFactors.resx">
-      <DependentUpon>dlgConvertToColumnFactors.vb</DependentUpon>
+    <EmbeddedResource Include="dlgConvertColumns.resx">
+      <DependentUpon>dlgConvertColumns.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgConvertToColumnFactors.sw-KE.resx">
-      <DependentUpon>dlgConvertToColumnFactors.vb</DependentUpon>
+    <EmbeddedResource Include="dlgConvertColumns.sw-KE.resx">
+      <DependentUpon>dlgConvertColumns.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCorrelation.fr-FR.resx">
       <DependentUpon>dlgCorrelation.vb</DependentUpon>
