--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -304,6 +304,12 @@
     <Compile Include="dlgFromLibrary.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgGroup.Designer.vb">
+      <DependentUpon>dlgGroup.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgGroup.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgHideShowColumns.Designer.vb">
       <DependentUpon>dlgHideShowColumns.vb</DependentUpon>
     </Compile>
@@ -1750,6 +1756,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgFromLibrary.sw-KE.resx">
       <DependentUpon>dlgFromLibrary.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgGroup.fr-FR.resx">
+      <DependentUpon>dlgGroup.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgGroup.resx">
+      <DependentUpon>dlgGroup.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgGroup.sw-KE.resx">
+      <DependentUpon>dlgGroup.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgHideShowColumns.fr-FR.resx">
       <DependentUpon>dlgHideShowColumns.vb</DependentUpon>
