--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -346,6 +346,12 @@
     <Compile Include="dlgMultipleResponse.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgOneSampleSummaryData.Designer.vb">
+      <DependentUpon>dlgOneSampleSummaryData.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgOneSampleSummaryData.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgOneWayANOVA.Designer.vb">
       <DependentUpon>dlgOneWayANOVA.vb</DependentUpon>
     </Compile>
@@ -1831,6 +1837,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgMultipleResponse.sw-KE.resx">
       <DependentUpon>dlgMultipleResponse.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgOneSampleSummaryData.fr-FR.resx">
+      <DependentUpon>dlgOneSampleSummaryData.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgOneSampleSummaryData.resx">
+      <DependentUpon>dlgOneSampleSummaryData.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgOneSampleSummaryData.sw-KE.resx">
+      <DependentUpon>dlgOneSampleSummaryData.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgOneWayANOVA.fr-FR.resx">
       <DependentUpon>dlgOneWayANOVA.vb</DependentUpon>
