--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -478,6 +478,12 @@
     <Compile Include="dlgTwoSampleNonparametricTest.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgTwoSampleSummaryData.Designer.vb">
+      <DependentUpon>dlgTwoSampleSummaryData.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgTwoSampleSummaryData.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgUnusedLevels.Designer.vb">
       <DependentUpon>dlgUnusedLevels.vb</DependentUpon>
     </Compile>
@@ -2044,6 +2050,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgNon_ParametricTwoWayAnova.sw-KE.resx">
       <DependentUpon>dlgNon_ParametricTwoWayAnova.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgTwoSampleSummaryData.fr-FR.resx">
+      <DependentUpon>dlgTwoSampleSummaryData.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgTwoSampleSummaryData.resx">
+      <DependentUpon>dlgTwoSampleSummaryData.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgTwoSampleSummaryData.sw-KE.resx">
+      <DependentUpon>dlgTwoSampleSummaryData.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgUnusedLevels.fr-FR.resx">
       <DependentUpon>dlgUnusedLevels.vb</DependentUpon>
