--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -316,10 +316,10 @@
     <Compile Include="dlgGoodnessofFit.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="dlgGroup.Designer.vb">
-      <DependentUpon>dlgGroup.vb</DependentUpon>
+    <Compile Include="dlgGroupTables.Designer.vb">
+      <DependentUpon>dlgGroupTables.vb</DependentUpon>
     </Compile>
-    <Compile Include="dlgGroup.vb">
+    <Compile Include="dlgGroupTables.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgHideShowColumns.Designer.vb">
@@ -1805,14 +1805,14 @@
     <EmbeddedResource Include="dlgGoodnessofFit.sw-KE.resx">
       <DependentUpon>dlgGoodnessofFit.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgGroup.fr-FR.resx">
-      <DependentUpon>dlgGroup.vb</DependentUpon>
+    <EmbeddedResource Include="dlgGroupTables.fr-FR.resx">
+      <DependentUpon>dlgGroupTables.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgGroup.resx">
-      <DependentUpon>dlgGroup.vb</DependentUpon>
+    <EmbeddedResource Include="dlgGroupTables.resx">
+      <DependentUpon>dlgGroupTables.vb</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="dlgGroup.sw-KE.resx">
-      <DependentUpon>dlgGroup.vb</DependentUpon>
+    <EmbeddedResource Include="dlgGroupTables.sw-KE.resx">
+      <DependentUpon>dlgGroupTables.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgHideShowColumns.fr-FR.resx">
       <DependentUpon>dlgHideShowColumns.vb</DependentUpon>
